--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -1,21 +1,3 @@
-cleo19:
-  title: Ring Resonator Based Ultrasound Detection in a Zero-Change Advanced CMOS-SOI Process
-  abstract: "<p>
-    Optical ultrasound detection using microring resonators (MRRs) in a
-    zero-change 45nm CMOS-SOI electronic-photonic platform with high intrinsic
-    sensitivity of 39.6 f m/kPa and frequency response of 6MHz is reported.
-    </p>"
-  venue: "Conference on Lasers and Electro-Optics"
-  venuenote: "CLEO"
-  issue: "JW2A.78"
-  year: 2019
-  month: May 
-  authors:
-    - zarkos
-    - hsu
-    - stojanovic
-  pdf: /publications/cleo2019.pdf
-
 vlsi2021:
   title: Fully Integrated Electronic-Photonic Ultrasound Receiver Array for Endoscopic Imaging Applications in a Zero-Change 45nm CMOS-SOI Process
   abstract: "<p>
@@ -40,3 +22,43 @@ vlsi2021:
     - whinnery
     - bhargava 
     - stojanovic
+
+cleo2021:
+  title: Monolithically Integrated Electronic-Photonic Ultrasound Receiver Using Microring Resonator
+  abstract: "<p>
+    The first optical ultrasound sensor with co-integrated read-out circuitry is presented. Based
+    on a micro-ring resonator (MRR), it has a measured 7.3mV/kPa sensitivity, 480Pa minimum detectable
+    pressure, operating at 80% fractional bandwidth around 5MHz.
+    </p>"
+  venue: "Conference on Lasers and Electro-Optics"
+  venuenote: "CLEO"
+  year: 2021
+  month: May
+  authors:
+    - zarkos
+    - buchbinder
+    - adamopoulos
+    - hsu
+    - madhvapathy 
+    - whinnery
+    - bhargava 
+    - stojanovic
+
+cleo19:
+  title: Ring Resonator Based Ultrasound Detection in a Zero-Change Advanced CMOS-SOI Process
+  abstract: "<p>
+    Optical ultrasound detection using microring resonators (MRRs) in a
+    zero-change 45nm CMOS-SOI electronic-photonic platform with high intrinsic
+    sensitivity of 39.6 f m/kPa and frequency response of 6MHz is reported.
+    </p>"
+  venue: "Conference on Lasers and Electro-Optics"
+  venuenote: "CLEO"
+  issue: "JW2A.78"
+  year: 2019
+  month: May 
+  authors:
+    - zarkos
+    - hsu
+    - stojanovic
+  pdf: /publications/cleo2019.pdf
+
