--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,8 @@ email: owhsu@stanford.edu
 # social links
 # twitter_username: jekyllrb
 github_username:  weiya711
+google_scholar: Olivia Hsu
+linkedin_username: weiya711
 #rss: rss
 # dribbble_username: jekyll
 # facebook_username: jekyll
