--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 title: Olivia Hsu 
 author: Olivia Hsu
 email: owhsu@stanford.edu
+email_show: owhsu [at] stanford [dot] edu
 #description: > # this means to ignore newlines until "twitter_username:"
 #  Write an awesome description for your new site here. You can edit this
 #  line in _config.yml. It will appear in your document head meta (for
