--- a/_data/teaching.yml
+++ b/_data/teaching.yml
@@ -1,20 +1,32 @@
 cs149fa21:
   title: "CS 149: Parallel Computing"
   url: "https://cs149.stanford.edu/fall21"
+  role: "Course Assistant (CA)"
   month: "Autumn"
   year: "2021"
   venue: "Stanford University"
 
-ee16a:
-  title: "EECS 16A: Designing Information Devices and Systems" 
-  venue: "UC Berkeley"
-  year: "2016-2017"
-  month: "Fall"
-  url: "https://inst.eecs.berkeley.edu/~ee16a/fa17"
+afrofemcoders:
+  title: "Afro Fem Coders: Intro to Python"
+  url: "https://afrofemcoders.org/"
+  role: "Student Instructor and Advisor"
+  month: "Oct"
+  year: "2020-2021"
+  venue: "Afro Fem Coders"
 
 hope:
   title: "Decal EE 198: Hands-on PCB Engineering"
   url: "https://ieee.berkeley.edu/hope/"
+  role: "Student Instructor"
+  month: "Fall"
+  year: "2018"
   venue: "UC Berkeley"
 
+ee16a:
+  title: "EECS 16A: Designing Information Devices and Systems" 
+  venue: "UC Berkeley"
+  role: "Head Undergraduate Student Instructor (UGSI)"
+  year: "2016-2017"
+  month: "Fall"
+  url: "https://inst.eecs.berkeley.edu/~ee16a/fa17"
 
