--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -16,7 +16,7 @@ asplos2024:
     </p>"
   venue: "to appear in International Conference on Architectural Support for Programming Languages and Operating Systems (ASPLOS)"
   year: 2024
-  month:
+  month: April
   url: "https://arxiv.org/abs/2212.11142" 
   authors:
     - hellsten
