--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -62,6 +62,7 @@ pldi2023:
   venue: "to appear in Programming Language Design and Implementation (PLDI)"
   year: 2023
   month: June
+  award: "Distinguished Paper Award"
   authors:
     - bansal
     - hsu
@@ -72,19 +73,19 @@ pldi2023:
 asplos2023: 
   title: The Sparse Abstract Machine
   abstract: "<p>
-    We propose the Sparse Abstract Machine (SAM), an intermediate representation
-    and abstract machine model for targeting sparse tensor algebra to
-    reconfigurable and fixed-function spatial dataflow accelerators. SAM defines a
-    streaming abstraction with sparse primitives that encompass a large space of
-    scheduled tensor algebra expressions. SAM dataflow graphs naturally separate
-    tensor formats from algorithms and is expressive enough to incorporate many
-    sparse-iteration and hardware-specific optimizations. We show an automatic
-    compilation technique from a high-level language to SAM and a set of hardware
-    primitives which implement it. We evaluate the generality and extensibility of
-    our sparse abstract machine, explore the performance space of sparse tensor
-    algebra optimizations using SAM, and provide an example implementation of our
-    SAM architecture.        
-    </p>"
+    We propose the Sparse Abstract Machine (SAM), an abstract machine model for
+    targeting sparse tensor algebra to reconfigurable and fixed-function spatial
+    dataflow accelerators. SAM defines a streaming dataflow abstraction with sparse
+    primitives that encompass a large space of scheduled tensor algebra
+    expressions. SAM dataflow graphs naturally separate tensor formats from
+    algorithms and are expressive enough to incorporate arbitrary iteration
+    orderings and many hardware-specific optimizations. We also present Custard, a
+    compiler from a high-level language to SAM that demonstrates SAM's usefulness
+    as an intermediate representation. We automatically bind from SAM to a
+    streaming dataflow simulator. We evaluate the generality and extensibility of
+    SAM, explore the performance space of sparse tensor algebra optimizations using
+    SAM, and show SAM's ability to represent dataflow hardware.
+</p>"
   venue: "International Conference on Architectural Support for Programming Languages and Operating Systems (ASPLOS)"
   year: 2023
   pdf: /publications/asplos2023-sam.pdf
