--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -63,6 +63,7 @@ pldi2023:
   year: 2023
   month: June
   award: "Distinguished Paper Award"
+  pdf: /publications/pldi2023.pdf
   authors:
     - bansal
     - hsu
